закончила страницу html

--- a/HTML5.html
+++ b/HTML5.html
@@ -10,7 +10,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <video src="images/header_HTML5.mp4" autoplay loop>
+        <img src="images/header_HTML5.png" alt="Логотип HTML5">
     </header>
 
     <main>
@@ -26,106 +26,118 @@
 
         <div class="main">
             <aside class="left">
-                <nav class="page-nav">
-                    <a href="./index.html">Что такое HTML</a>
-                    <a href="./HTML5.html">Структура HTML-элементов</a>
-                    <a href="./CSS3.html">Атрибуты</a>
-                    <a href="./Bootstrap.html">Структура документа HTML5</a>
-                </nav>
+                <div class="nav">
+                    <img src="images/girl-with-desk.png" alt="Девочка с табличкой" class="img-nav">
+                    <nav class="page-nav">
+                        <a href="#article-1">Что такое HTML</a>
+                        <a href="#article-2">Структура HTML-элементов</a>
+                        <a href="#article-3">Атрибуты</a>
+                        <a href="#article-4">Структура документа HTML5</a>
+                    </nav>
+                </div>
             </aside>
 
-            <section>
-                <article class="article-1">
+            <div class="section">
+                <article id="article-1">
                     <h2>Что такое HTML</h2>
-                    <img src="images/man-with-question.png" alt="Рисунок мужчина с вопросом">
+                    <img src="images/girl-with-question.png" alt="Рисунок мужчина с вопросом">
                     <div class="text">
-                    <p>HTML (HyperText Markup Language) представляет язык разметки гипертекста, используемый
-                        преимущественно для создания документов в сети интернет. HTML начал свой путь в начале 90-х
-                        годов как примитивный язык для создания веб-страниц, и в настоящий момент уже трудно представить
-                        себе интернет без HTML. Подавляющее большинство сайтов так или иначе используют HTML.</p>
-                    <p>В 2014 году официально была завершена работа над новым стандартом - HTML5, который фактически
-                        произвел революцию, привнеся в HTML много нового.</p>
-                    <p>Что именно привнес HTML5?
-                    <ul>
-                        <li>HTML5 определяет новый алгоритм парсинга для создания структуры DOM</li>
-                        <li>добавление новых элементов и тегов, как например, элементы video, audio и ряд других</li>
-                        <li>переопределение правил и семантики уже существовавших элементов HTML</li>
-                    </ul>
-                    </p>
+                        <p>HTML (HyperText Markup Language) представляет язык разметки гипертекста, используемый
+                            преимущественно для создания документов в сети интернет. HTML начал свой путь в начале 90-х
+                            годов как примитивный язык для создания веб-страниц, и в настоящий момент уже трудно
+                            представить
+                            себе интернет без HTML. Подавляющее большинство сайтов так или иначе используют HTML.</p>
+                        <p>В 2014 году официально была завершена работа над новым стандартом - HTML5, который фактически
+                            произвел революцию, привнеся в HTML много нового.</p>
+                        <p>Что именно привнес HTML5?</p>
+                        <ul>
+                            <li>HTML5 определяет новый алгоритм парсинга для создания структуры DOM</li>
+                            <li>добавление новых элементов и тегов, как например, элементы video, audio и ряд других
+                            </li>
+                            <li>переопределение правил и семантики уже существовавших элементов HTML</li>
+                        </ul>
+
                     </div>
                 </article>
 
-                <article class="article-3">
+                <article id="article-2">
                     <h2>Структура HTML-элементов</h2>
                     <img src="images/html_elements.png" alt="элемент HTML" class="img-element">
                     <div class="text">
-                    <p>Основными частями элемента являются:
-                    <ol>
-                        <li>Открывающий тег: Он состоит из названия (обозначения) элемента (в нашем случае, p),
-                            помещённого внутри угловых скобок. Данный тег служит признаком начала элемента, с этого
-                            момента тег начинает влиять на следующее после него содержимое.
-                        </li>
-                        <li>Закрывающий тег: выглядит как и открывающий, но содержит слеш перед названием тега. Он
-                            служит признаком конца элемента. Пропуски закрывающих тегов — типичная ошибка новичков,
-                            которая может приводить к неопределённым результатам — в лучшем случае всё сработает
-                            правильно, в других страница может вовсе не прорисоваться или прорисоваться не как
-                            ожидалось.
-                        </li>
-                        <li>Содержимое: Как видно, в нашем случае содержимым является простой текст.</li>
-                        <li>Элемент: открывающий тег + закрывающий тег + содержимое = элемент.</li>
-                    </ol>
-                    </p>
+                        <p>Основными частями элемента являются:</p>
+                        <ol>
+                            <li>Открывающий тег: Он состоит из названия (обозначения) элемента (в нашем случае, p),
+                                помещённого внутри угловых скобок. Данный тег служит признаком начала элемента, с этого
+                                момента тег начинает влиять на следующее после него содержимое.
+                            </li>
+                            <li>Закрывающий тег: выглядит как и открывающий, но содержит слеш перед названием тега. Он
+                                служит признаком конца элемента. Пропуски закрывающих тегов — типичная ошибка новичков,
+                                которая может приводить к неопределённым результатам — в лучшем случае всё сработает
+                                правильно, в других страница может вовсе не прорисоваться или прорисоваться не как
+                                ожидалось.
+                            </li>
+                            <li>Содержимое: Как видно, в нашем случае содержимым является простой текст.</li>
+                            <li>Элемент: открывающий тег + закрывающий тег + содержимое = элемент.</li>
+                        </ol>
+
                     </div>
                     <div class="text">
-                    <h3>Атрибуты</h3>
-                    <p>У элементов также могут быть атрибуты, которые выглядят так:</p>
-                    <img src="images/grumpy-cat-attribute-small.png" alt="атрибут html элемента" class="img-attribute">
-                    <p>Атрибуты содержат дополнительную информацию об элементе, которая, по вашему мнению, не должна
-                        отображаться в содержимом элемента. В данном случае атрибут class позволяет вам дать элементу
-                        идентификационное имя, которое в дальнейшем может быть использовано для обращения к элементу с
-                        информацией о стиле и прочими вещами.</p>
-                    <p>Атрибут должен иметь:
-                    <ol>
-                        <li>Пробел между атрибутом и именем элемента (или предыдущим атрибутом, если у элемента уже есть
-                            один или несколько атрибутов).
-                        </li>
-                        <li>Имя атрибута и следующий за ним знак равенства.</li>
-                        <li>Значение атрибута, заключённое в кавычки.</li>
-                    </ol>
-                    </p>
+                        <h3 id="article-3">Атрибуты</h3>
+                        <p>У элементов также могут быть атрибуты, которые выглядят так:</p>
+                        <img src="images/grumpy-cat-attribute-small.png" alt="атрибут html элемента"
+                             class="img-attribute">
+                        <p>Атрибуты содержат дополнительную информацию об элементе, которая, по вашему мнению, не должна
+                            отображаться в содержимом элемента. В данном случае атрибут class позволяет вам дать
+                            элементу
+                            идентификационное имя, которое в дальнейшем может быть использовано для обращения к элементу
+                            с
+                            информацией о стиле и прочими вещами.</p>
+                        <p>Атрибут должен иметь:</p>
+                        <ol>
+                            <li>Пробел между атрибутом и именем элемента (или предыдущим атрибутом, если у элемента уже
+                                есть
+                                один или несколько атрибутов).
+                            </li>
+                            <li>Имя атрибута и следующий за ним знак равенства.</li>
+                            <li>Значение атрибута, заключённое в кавычки.</li>
+                        </ol>
+
                     </div>
                 </article>
 
-                <article class="article-4">
+                <article id="article-4">
                     <h2>Структура документа HTML5</h2>
                     <div class="text">
-                    <p>Каждый HTML документ, отвечающий спецификации HTML какой-либо версии, обязан начинаться со строки
-                        декларации версии HTML, делается это с помощью объявления &lt;!DOCTYPE&gt;- доктайп . </p>
-                    <img src="images/example-code.PNG" alt="пример кода"class="img1">
-                    <p>Для создания документа HTML5 нам нужны в первую очередь два элемента: DOCTYPE и html. Элемент
-                        doctype или Document Type Declaration сообщает веб-браузеру тип документа.
-                        <!DOCTYPE html> указывает, что данный документ является документом html и что используется
-                        html5, а не html4 или какая-то другая версия языка разметки.
-                    </p>
-                    <p>А элемент html между своим открывающим и закрывающим тегами содержит все содержимое документа.
-                    </p>
-                    <p>Внутри элемента html мы можем разместить два других элемента: head и body. Элемент head содержит
-                        метаданные веб-страницы - заголовок веб-страницы, тип кодировки и т.д., а также ссылки на
-                        внешние ресурсы - стили, скрипты, если они использутся. Элемент body собственно определяет
-                        содержимое html-страницы.</p>
-                    <p>Элементы, находящиеся внутри элемента &lt;html&gt;, образуют дерево документа, так называемую
-                        объектную модель документа, DOM (document object model). При этом элемент &lt;html&gt; является
-                        корневым элементом.</p>
-                    <img src="images/DOM.png" alt="Пример простейшей структуры веб-страницы">
+                        <p>Каждый HTML документ, отвечающий спецификации HTML какой-либо версии, обязан начинаться со
+                            строки
+                            декларации версии HTML, делается это с помощью объявления &lt;!DOCTYPE&gt;- доктайп . </p>
+                        <img src="images/example-code.PNG" alt="пример кода" class="img1">
+                        <p>Для создания документа HTML5 нам нужны в первую очередь два элемента: DOCTYPE и html. Элемент
+                            doctype или Document Type Declaration сообщает веб-браузеру тип документа.
+                            &lt;!DOCTYPE html&gt; указывает, что данный документ является документом html и что
+                            используется
+                            html5, а не html4 или какая-то другая версия языка разметки.
+                        </p>
+                        <p>А элемент html между своим открывающим и закрывающим тегами содержит все содержимое
+                            документа.
+                        </p>
+                        <p>Внутри элемента html мы можем разместить два других элемента: head и body. Элемент head
+                            содержит
+                            метаданные веб-страницы - заголовок веб-страницы, тип кодировки и т.д., а также ссылки на
+                            внешние ресурсы - стили, скрипты, если они использутся. Элемент body собственно определяет
+                            содержимое html-страницы.</p>
+                        <p>Элементы, находящиеся внутри элемента &lt;html&gt;, образуют дерево документа, так называемую
+                            объектную модель документа, DOM (document object model). При этом элемент &lt;html&gt;
+                            является
+                            корневым элементом.</p>
+                        <img src="images/DOM.png" alt="Пример простейшей структуры веб-страницы">
                     </div>
                 </article>
-
-            </section>
-
+            </div>
 
         </div>
         <a href="#top">
-            <img src="images/spaceship.png"
+            <img src="images/supergirl.png"
                  alt="в начало"
                  title="в начало"
                  class="symbol-navigation">
@@ -134,11 +146,22 @@
     </main>
 
     <footer>
-        <img src="images/girl3.png" alt="girl-with-laptop">
-        <div class="text">
-        <p>JKTV22</p>
-        <p>Nizhegorodtseva Olga</p>
+        <div class="elem-footer">
+            <div id="img-foot">
+                <a href="https://moowlinresume.notion.site/4964d0794c64485fb48578b645bc898a" target="_blank">
+                    <img src="images/icon-notion.png" alt="иконка Notion" id="notion">
+                </a>
+                <a href="https://github.com/Moowlin" target="_blank">
+                    <img src="images/icon-github.png" alt="иконка Github" id="github">
+                </a>
+            </div>
+            <div id="text">
+                <p>JKTV22</p>
+                <p>Nizhegorodtseva Olga</p>
+            </div>
         </div>
+
+        <img src="images/girl3.png" alt="girl-with-laptop" id="girl">
     </footer>
 </div>
 </body>
